--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -1,7 +1,19 @@
 .product-body{
     max-width: 20rem;
+    border: 2px solid var(--purple);
+    border-radius: 1rem;
+    box-shadow: 0px 3px 5px var(--purple);
+    overflow: hidden;
     display: flex;
     flex-direction: column;   
+}
+
+.product-body:hover{
+    cursor: pointer;
+}
+.product-body:hover .product-image img{
+    transition: 0.3s;
+    transform: scale(1.1);
 }
 
 .product-image{
@@ -14,6 +26,10 @@
 }
 
 .product-info{
+    padding: 1rem;
     display: flex;
     flex-direction: column;
+    h3{
+        margin-bottom: 1rem;
+    }
 }
